---------------------------------------------------------------------------------------------------
Version: 4.2.8
Date: ????
  Bugfixes:
    - Fixed typo in ingredient generation possibly causing a crash with bobsmods
---------------------------------------------------------------------------------------------------
Version: 4.2.7
Date: 2026-01-03
  Changes:
    - Added omni.lib.has_science_pack()
  Bugfixes:
    - Fixed replaceResults() not replacing recipe.main_product
    - Fixed RecGen:import() crashing on recipes with no results table
    - Fixed RecGen:import() generating an item prototype in some cases when the main prod is ""
---------------------------------------------------------------------------------------------------
Version: 4.2.6
Date: 2026-01-02
  Changes:
    - Updated compat for bobsmods
    - Add valve prototype tp locale hierarchy
  Bugfixes:
    - Fixed various logical issues with addIcon() and addSmallIcon()
---------------------------------------------------------------------------------------------------
Version: 4.2.5
Date: 2024.12.21
  Bugfixes:
    - Fixed omni.lib.replace_recipe_result() / ...ingredients() resetting amount to 1 if no amount
      for the replacement was defined instead of keeping the amount of the original item
---------------------------------------------------------------------------------------------------
Version: 4.2.4
Date: 2024.12.13
  Changes:
    - Removed omni.lib.find_prototype() - use omni.lib.locale.find()
---------------------------------------------------------------------------------------------------
Version: 4.2.3
Date: 2024.11.26
  Bugfixes:
    - Fixed alert_icon_scale and shift not being imported correctly
    - Fixed that omnitraction recipes input amount was sometimes not set correctly
---------------------------------------------------------------------------------------------------
Version: 4.2.2
Date: 2024.11.23
  Changes:
    - Unified setAnimation() and setWorkingVis() into setGraphics()